--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://wallpaperplay.com/walls/full/f/f/6/200727.jpg) bottom center;
+  background: url(https://udemy-images.udemy.com/course/750x422/827464_861a_3.jpg) bottom center;
   background-size: cover;
 }
 
