--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://udemy-images.udemy.com/course/750x422/827464_861a_3.jpg) bottom center;
+  background: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/Vd3bj2jPe/videoblocks-set-drums-dark-studio-instruments-drummer-close-up-drum-set-musical-drums-percussion-instruments-percussion-drums-drumset-background-foot-drum-musical-instruments_rbfre0bae_thumbnail-full01.png) bottom center;
   background-size: cover;
 }
 
